--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "8.x.x"
   },
   "scripts": {
-    "start": "webpack-dev-server -d --content-base public/ --progress --colors"
+    "start": "webpack-dev-server"
   },
   "dependencies": {
     "bootstrap-css-only": "^3.3.7",
