--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-webpack-setup",
+  "name": "Cameron-Jones-Web-Design",
   "version": "1.0.0",
   "description": "A React and Webpack setup for WDI",
   "main": "server.js",
