--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-scroll-to-component": "^1.0.2",
-    "react-visibility-sensor": "^3.11.0"
-  },
-  "devDependencies": {
+    "react-visibility-sensor": "^3.11.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -36,5 +34,8 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.11.0"
+  },
+  "devDependencies": {
+
   }
 }
