--- a/package.json
+++ b/package.json
@@ -11,31 +11,29 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
-    "bootstrap-css-only": "^3.3.7",
-    "eslint": "^4.15.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2",
-    "react-scroll-to-component": "^1.0.2",
-    "react-visibility-sensor": "^3.11.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap-css-only": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.15.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "react-scroll-to-component": "^1.0.2",
+    "react-visibility-sensor": "^3.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.11.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
