--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.15.0",
+    "express": "^4.16.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scroll-to-component": "^1.0.2",
-    "react-visibility-sensor": "^3.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
