--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "react-scroll-to-component": "^1.0.2",
+    "react-visibility-sensor": "^3.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
