--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "license": "MIT",
   "engines": {
-    "node": "5.0.0",
+    "node": "8.x.x",
     "npm": "4.6.1"  
   },
   "scripts": {
