--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "build": "webpack"
   },
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "bootstrap-css-only": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
