--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "Cameron-Jones-Web-Design",
-  "version": "1.0.0",
-  "description": "A React and Webpack setup for WDI",
-  "main": "app.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
-  },
+  "name": "my-portfolio",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "bootstrap-css-only": "^3.3.7",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.15.0",
-    "express": "^4.16.2",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
-    "morgan": "^1.9.0",
-    "node-sass": "^4.5.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "bootstrap-css-only": "^4.0.0",
+    "gh-pages": "^1.1.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.1",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.10.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0",
     "react-scroll-to-component": "^1.0.2",
-    "react-visibility-sensor": "^3.11.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.11.0"
+    "react-visibility-sensor": "^3.11.0"
   },
-  "devDependencies": {}
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "deploy": "gh-pages -d build",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "precommit": "lint-staged",
+    "predeploy": "npm run build",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
