--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://camawjones.github.io/portfolio-site/",
   "devDependencies": {
     "react-scripts": "1.1.0",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^1.1.0"
   },
   "dependencies": {
     "bootstrap-css-only": "^4.0.0",
