--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://camawjones.github.io/portfolio-site/",
+  "homepage": "https://www.camjones.co.uk",
   "devDependencies": {
     "react-scripts": "1.1.0",
     "gh-pages": "^1.1.0"
